quiz listo (falta guardar datos)

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -52,6 +52,12 @@ html, body {
     box-shadow: 0 0 3px 1px #BABABA;
 }
 
+.skipped .skipped-item{
+    cursor: pointer;
+    text-decoration: none;
+    color: #333333;
+}
+
 /* single quiz*/
 .full-height {
     height: 100vh;
